Method isBlank() replaced